Fixed spacing of opening paragraph

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -685,7 +685,7 @@ section.lazy-placeholder:after {
   opacity: 0.3;
 }
 .cid-sgdrpY4W0H {
-  padding-top: 82.5px;
+  padding-top: 105px;
   padding-bottom: 0px;
   background-color: #f9f9f9;
 }
@@ -697,13 +697,13 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-sgdrpY4W0H .mbr-text {
-  color: #565656;
+  color: #a4252c;
   text-align: left;
   padding-top: .5rem;
 }
 .cid-sgdqo9jwJT {
   padding-top: 0px;
-  padding-bottom: 15px;
+  padding-bottom: 22.5px;
   background-color: #f9f9f9;
 }
 .cid-sgdqo9jwJT .col-14 {
